升级swagger组件为spring doc